redhat/rhoai/v3.5/base/03-workloads/autorag/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autorag
  labels:
    opendatahub.io/dashboard: "true"
  annotations:
    openshift.io/display-name: "AutoRAG Workloads"
